fix bottom section which covers trends content

--- a/css/trends.css
+++ b/css/trends.css
@@ -259,9 +259,9 @@ text.mapLable.blank{
 .trendsHide{
   border-left: 70px solid white;
   border-right: 70px solid white;
-  padding-left: 0;
-  padding-right: 0;
-  z-index: 99999;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  z-index: 999;
   position: relative;
 }
 @media (max-width: 1240px){
@@ -313,7 +313,7 @@ text.mapLable.blank{
     border-right: 34px solid white;
     padding-left: 0;
     padding-right: 0;
-    z-index: 99999;
+    z-index: 999;
     position: relative;
   }
   .step {
@@ -368,7 +368,7 @@ text.mapLable.blank{
     border-right: 20px solid white;
     padding-left: 0;
     padding-right: 0;
-    z-index: 99999;
+    z-index: 999;
     position: relative;
   }
 }
